--- a/src/sv/edu/udb/forms/Estudiante.form
+++ b/src/sv/edu/udb/forms/Estudiante.form
@@ -112,6 +112,14 @@
           <text value="Regresar"/>
         </properties>
       </component>
+      <component id="473f" class="javax.swing.JButton" binding="btnLimpiar">
+        <constraints>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Limpiar"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
