--- a/src/sv/edu/udb/forms/Nota.form
+++ b/src/sv/edu/udb/forms/Nota.form
@@ -86,6 +86,14 @@
           <text value="Regresar"/>
         </properties>
       </component>
+      <component id="b6850" class="javax.swing.JButton" binding="btnLimpiar">
+        <constraints>
+          <grid row="4" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Limpiar"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
